== 2.7.28 ==
Release date: 
* Fixed: Counter - Position of prefix and suffix was not inline

== 2.7.27 ==
Release date: August 20, 2024
* Fixed: Gravity Forms - Submit Button styling options were not working when button is set to inline position
* Fixed: Gravity Forms - Submit Button full width option
* Fixed: Posts - Row Spacing option

== 2.7.26 ==
Release date: July 17, 2024
* Fixed: Instagram Feed - PHP error

== 2.7.25 ==
Release date: July 16, 2024
* Fixed: Posts - JS error with load more pagination
* Fixed: Gravity Forms - Submit Margin Top option
* Fixed: Info Grid & Carousel - Center Slides option was not working on frontend

== 2.7.24 ==
Release date: July 10, 2024
* Enhancement: Logo Carousel - Added option to set width, height and object fit properties for logos
* Fixed: Business Hours - Closed Text field was not WPML translatable
* Fixed: Image Comparison - Labels were not showing
* Fixed: Info Grid & Carousel - Coverflow effect was not showing correct number of slides

== 2.7.23 ==
Release date: July 5, 2024
* Enhancement: Added support for Elementor's Element Caching feature
* Enhancement: Added support for Elementor custom breakpoints in all carousel/slider widgets
* Enhancement: Counter - Replaced Odometer JS lib with jQuery Numerator JS lib as used by Elementor
* Enhancement: Counter - Added Underline and Apostrophe separator options
* Enhancement: Performance improvements

== 2.7.22 ==
Release date: June 19, 2024
* Enhancement: Posts - Added support for WPML
* Enhancement: Random Image - Added support for WPML

== 2.7.21 ==
Release date: June 12, 2024
* Enhancement: Team Member - Added X icons to recommended list
* Enhancement: Team Member Carousel - Replaced Twitter icon with X icon
* Security Fix: Link Effects - Improved code security

== 2.7.20 ==
Release date: May 29, 2024
* Fixed: Info Grid & Carousel - Pause on Hover option was not working
* Fixed: Info Grid & Carousel - Equal Height option for Coverflow effect